--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Site Title"
+locale                   : "es-CL"
+title                    : "PARTYHACK"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+subtitle                 : "Comunidad de Ciberseguridad de Habla Hispana"
+name                     : ""
+description              : "Somos una comunidad Chilena de Ciberseguridad, enfocada en entregar conocimiento a las personas que lo necesitan, permitiendo el intercambio de conocimiento e información, entre nuestros miembros.."
+url                      : "https://partyhack.cl" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
