--- a/_config.yml
+++ b/_config.yml
@@ -136,16 +136,16 @@ footer:
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/party_hack"
     - label: "Linkedin"
-      icon: "fab fa-fw fa-facebook-square"
+      icon: "fab fa-fw fab fa-fw fa-linkedin"
       url: "https://cl.linkedin.com/company/partyhack-cl"
     - label: "Youtube"
-      icon: "fab fa-fw fa-github"
+      icon: "fab fa-fw fa-youtubr"
       url: "https://www.youtube.com/channel/UCHLBYZ7Sv3jFCiBN3AgMUSA?sub_confirmation=1"
     - label: "Telegram"
-      icon: "fab fa-fw fa-gitlab"
+      icon: "fab fa-fw fa-telegram"
       url: "https://t.me/+R9wfL2gGhjUEtlYX"
     - label: "Email"
-      icon: "fab fa-fw fa-bitbucket"
+      icon: "fab fa-fw fa-envelope"
       url: "mailto:conversemos@partyhack.cl"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
