--- a/_config.yml
+++ b/_config.yml
@@ -280,7 +280,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "post"
       type: posts
     values:
       layout: single
@@ -289,4 +289,11 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
   
