--- a/_config.yml
+++ b/_config.yml
@@ -278,11 +278,16 @@ compress_html:
 
 # Defaults
 defaults:
-  # _pages
+  # _posts
   - scope:
-      path: ""
-      type: pages
+      path: "post"
+      type: posts
     values:
       layout: single
       author_profile: true
+      read_time: true
+      comments: # true
+      share: true
+      related: true
+  
   
