--- a/_config.yml
+++ b/_config.yml
@@ -283,7 +283,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: default
       author_profile: false
       read_time: true
       comments: # true
