--- a/_config.yml
+++ b/_config.yml
@@ -290,5 +290,13 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: false
+      related: true
   
   
