--- a/_config.yml
+++ b/_config.yml
@@ -296,6 +296,7 @@ defaults:
       type: pages
     values:
       layout: single
+      title : false
       author_profile: false
       related: true
   
