--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 author:
   name             : "Quienes Somos"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "<p style='text-align:justify'>Somos una comunidad Chilena de Ciberseguridad, enfocada en entregar conocimiento a las personas que lo necesitan, permitiendo el intercambio de conocimiento e información, entre nuestros miembros.</p>"
+  bio              : "Somos una comunidad Chilena de Ciberseguridad, enfocada en entregar conocimiento a las personas que lo necesitan, permitiendo el intercambio de conocimiento e información, entre nuestros miembros."
   location         : "Chile"
   email            : 
   links:
