--- a/_config.yml
+++ b/_config.yml
@@ -299,7 +299,7 @@ defaults:
       related: true
   # _pages
   - scope:
-      path: "/mision-vision/"
+      path: ""
       type: pages
     values:
       layout: single
