--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title_separator          : "-"
 subtitle                 : "Comunidad de Ciberseguridad de Habla Hispana"
 name                     : ""
 description              : "Somos una comunidad Chilena de Ciberseguridad, enfocada en entregar conocimiento a las personas que lo necesitan, permitiendo el intercambio de conocimiento e información, entre nuestros miembros."
-url                      : "https://racso20.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : /PartHack # the subpath of your site, e.g. "/blog"
+url                      : "https://partyhack.cl" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/teaser.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
