--- a/_config.yml
+++ b/_config.yml
@@ -293,7 +293,7 @@ defaults:
     values:
       layout: single
       show_title: true
-      show_teaser: false
+      show_teaser: true
       author_profile: false
       read_time: true
       comments: # true
@@ -305,9 +305,10 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: false
-      related: true
       show_title: true
       show_teaser: false
+      author_profile: false
+      related: true
+      
   
   
