--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,13 +13,15 @@ main:
   - title: "Articulos"
     children:
         - title: "Ciberseguridad"
-          url: "#"
+          url: "/categories/#ciberseguridad"
         - title: "Eventos"
-          url: "#"
+          url: "/categories/#evento"
         - title: "Noticias"
-          url: "#"
+          url: "/categories/#noticia"
         - title: "Tecnología"
-          url: "#"
+          url: "/categories/#tecnología"
+        - title: "Write Up"
+          url: "/categories/#writeup"
   - title: "Merchandising"
     url: "#"
   - title: "Eventos"
